--- a/templates/ang_home.html
+++ b/templates/ang_home.html
@@ -14,6 +14,7 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.4/vendors/scrolloverflow.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.4/jquery.fullpage.min.js"></script>
   <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
+  <script src="https://cdn.auth0.com/js/auth0/8.8/auth0.min.js"></script>
   <link href="{% static 'ang/styles.bundle.css' %}" rel="stylesheet"/>
 </head>
 <body>
