--- a/tipsyapp/static/ang/styles.bundle.css
+++ b/tipsyapp/static/ang/styles.bundle.css
@@ -1,4 +1,4 @@
-/*!
+html{position:relative;min-height:100%}body{font-family:Avenir Next,serif;color:#000;background-repeat:no-repeat;background-position:30% 60%;background-size:500px auto}.footer{position:absolute;bottom:0;height:60px;width:100%}.navbar-default .navbar-toggle{color:#337ab7;border-color:transparent;margin:4px 5px}.navbar{margin-bottom:0;border-radius:0}.recipe-can{color:green}.recipe-close{color:orange}.recipe-cant{color:red}/*!
  * Bootstrap v3.3.7 (http://getbootstrap.com)
  * Copyright 2011-2016 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
