--- a/src/app/components/detail/recipe/recipe.component.html
+++ b/src/app/components/detail/recipe/recipe.component.html
@@ -10,15 +10,20 @@
         <br *ngIf="layer.name">
         <h4 *ngIf="layer.name">{{layer.name}}</h4>
           <mat-chip *ngFor="let ingredient of layer.ingredients"
-                   selected="true"
+                   selected="true" [matTooltipPosition]="'right'" [matTooltip]="ingredient.need_it ? 'Missing this item.' : 'You have this item!'"
                    [color]="ingredient.need_it ? 'warn': 'primary'">
             {{ingredient.amount}} {{ingredient.name}}
           </mat-chip>
       </mat-chip-list>
-      <br>
-      <span *ngFor="let playlist of drinkData.playlists">
-        {{playlist}},
-      </span>
+      <hr>
+      <h4>
+        <b>Playlists</b>
+      </h4>
+      <mat-chip-list >
+        <mat-chip *ngFor="let playlist of drinkData.playlists">
+          {{playlist}}
+        </mat-chip>
+      </mat-chip-list>
     </div>
   </div>
 </div>
