--- a/templates/ang_home.html
+++ b/templates/ang_home.html
@@ -6,23 +6,32 @@
   <meta charset="utf-8">
   <title>Tipsy App</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="https://yt3.ggpht.com/-Z_YP5f4MSNk/AAAAAAAAAAI/AAAAAAAAAAA/FKaYXVpYcco/s100-c-k-no-mo-rj-c0xffffff/photo.jpg">
   <!--<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>-->
   <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.4/jquery.fullpage.extensions.min.js"></script>-->
   <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.4/vendors/jquery.easings.min.js"></script>-->
   <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.4/vendors/scrolloverflow.min.js"></script>-->
   <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.4/jquery.fullpage.min.js"></script>-->
-  <!--<script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>-->
-  <script src="https://cdn.auth0.com/js/auth0/8.8/auth0.min.js"></script>
-  <link href="{% static 'ang/styles.bundle.css' %}" rel="stylesheet"/>
+  <!--<script src="https://cdn.auth0.com/js/auth0/8.8/auth0.min.js"></script>-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js" ></script>
+  <script>
+    window.global = window
+
+  </script>
+  <!--hello-->
+
+  <link href="{% static 'ang/styles.css' %}" rel="stylesheet"/>
 </head>
 <body>
 <app-root>
 </app-root>
-<script type="text/javascript" src="{% static 'ang/inline.bundle.js' %}"></script>
-<script type="text/javascript" src="{% static 'ang/polyfills.bundle.js' %}"></script>
-<script type="text/javascript" src="{% static 'ang/vendor.bundle.js' %}"></script>
-<script type="text/javascript" src="{% static 'ang/main.bundle.js' %}"></script>
+<script type="text/javascript" src="{% static 'ang/styles.js' %}"></script>
+<script type="text/javascript" src="{% static 'ang/vendor.js' %}"></script>
+
+<script type="text/javascript" src="{% static 'ang/polyfills.js' %}"></script>
+<script type="text/javascript" src="{% static 'ang/main.js' %}"></script>
+<script type="text/javascript" src="{% static 'ang/runtime.js' %}"></script>
 </body>
 </html>
